# zenie-code

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  benchmark.example.json  config.example.json  install.ps1  install.sh  pyproject.toml  requirements-optional.txt  uninstall.ps1  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
scripts/: build.ps1  check.ps1  dev-install.ps1
src/zenie_code/: agent_core.py  baseline_checks.py  benchmark.py  branding.py  cli.py  config_manager.py  console.py  context_budget.py  diagnostic_engine.py  diagnostic_fsm.py  evidence_store.py  fault_localizer.py  hypothesis_engine.py  llm_client.py  memory.py  model_manager.py  model_wizard.py  patcher.py  permissions.py  project_profiler.py  prompts.py  repo_graph.py  repo_tools.py  reproduction_engine.py  requirement_refiner.py  sandbox.py  schemas.py  self_check.py  tool_registry.py  verifier.py
tests/: test_branding.py  test_config.py  test_model_registry.py  test_requirement_refiner.py
